= CHANGES

== 0.9.15 (Unreleased)

* Fixed custom conditions
* Adds Template/Plugin generation
* Added regex support in routes
* Removed some deprecations
* Fixes options_for_select helper selected logic and added test
* Added Before/After load hooks
* Fixes DataMapper.finalize
* Fixes issue with invalid class on form fields [Thanks RichGuk]
* Enhances Datamapper database creation [Thanks Lusis]
* Adds a span around 'required' note for form fields
* Fixes padrino bin command to properly display help
* Stores component file in project after choices are validated
* Added Ohm support [Thanks to Lusis]
* Updated require_dependencies to take a version
* Fixes app destroy option
* Adds Dutch translation [Thanks to Martijin]
* Adds Polish translation [Thanks to Kriss]

== 0.9.14

* Application generator should create public subfolder
* Refactored application mounter class
* Updated mongomapper to use bson_ext
* Use entity code instead of copyright symbol
* Ensure app generation creates own public folder
* Fixed padrino g alias
* Fixed distance_of_time_in_words helper [Thanks to Yannick Koechlin]

== 0.9.13

* Fixed a problem with padrino g the alias of padrino-gen
* Fixed a naming bug in relation to using classify to manipulate project name
* Refactored and enhanced rake routes (and rake routes:app)

== 0.9.12

* Deprecated mount_core and remove references
* Fixed problem with czech translation file
* Fixed a problem with routes with same path but different verbs and provides

== 0.9.11

* Fixed provides with IE
* DM 1.0 and AR Tasks compat
* Fixed DM 1.0 rake tasks
* Dropped support of :respond_to in favor of :provides
* Added provides in controller level App.controller :provides => [:json, :xml]
* Added compatibility with AS 3.0
* Fixed compatibility with DM 1.0
* Improves dependencies in a Gemfile and autoinjected into gemspecs
* Allow models to be generated in subapps with --app flag
* Added bundler support also for testing [Thanks to Ryanfitz]