@@ -289,6 +289,12 @@ class TestProjectGenerator < Test::Unit::TestCase
       assert_match(/Applying.*?haml.*?renderer/, buffer)
       assert_match_in_file(/gem 'haml'/, '/tmp/sample_project/Gemfile')
     end
+    
+    should "properly generate for erubis" do 
+      buffer = silence_logger { generate(:project, 'sample_project', '--root=/tmp', '--renderer=erubis','--script=none') }
+      assert_match(/Applying.*?erubis.*?renderer/,buffer)
+      assert_match_in_file(/gem 'erubis'/, '/tmp/sample_project/Gemfile')
+    end
   end
 
   context "the generator for script component" do
