@@ -2,6 +2,7 @@
 
 == 0.9.15 (Unreleased)
 
+* Added erubis support [Thanks Cored]
 * Fixed custom conditions
 * Adds Template/Plugin generation
 * Added regex support in routes
